[gd_scene load_steps=2 format=3 uid="uid://ciiiwec0uyyt2"]

[ext_resource type="Script" path="res://LVL_Transitions/lvlselect.gd" id="1_ss0c2"]

[node name="lvlselect" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ss0c2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "  SELECT LEVEL:"

[node name="tutorials" type="Button" parent="VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Practice"

[node name="guanlet" type="Button" parent="VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Gauntlet"

[node name="boss" type="Button" parent="VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Challenge Boss"

[connection signal="pressed" from="VBoxContainer/tutorials" to="." method="_on_tutorials_pressed"]
[connection signal="pressed" from="VBoxContainer/guanlet" to="." method="_on_guanlet_pressed"]
[connection signal="pressed" from="VBoxContainer/boss" to="." method="_on_boss_pressed"]
